Sat Sep 16 09:20:49 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* birnetutils.[hc]: Added birnet_malloc_aligned(), which allocates
	memory with an arbitary alignment. The caller is responsible for
	for keeping track of and freeing the unaligned memory.

Tue Sep 12 01:41:18 2006  Tim Janik  <timj@gtk.org>

	* birnetutilsxx.cc (rip_data): fix missing updates of 'last' pointer
	wich caused data loss.

Thu Aug 23 21:21:00 2006  Tim Janik  <timj@gtk.org>

	* birnetcore.h, birnetutilsxx.hh: always use global uint definition
	(either from types.h or from a fallback definition) to avoid
	ambiguities.

Mon Aug 21 01:03:24 2006  Tim Janik  <timj@gtk.org>

	* birnetutils.h, birnetutils.c: added birnet_memset4(), a function to
	fill large memory regions with data of 32bit integer width.

Tue Jul 18 01:14:22 2006  Tim Janik  <timj@gtk.org>

	* birnetthreadxx.cc: use birnet_*__chain4init() and 
	birnet_*__unchain() functions to construct initializer lists for
	mutexes and conditions. that way we don't require std::list to be
	constructed at static mutex construction time (which can be a
	problem).

	* birnetthread.h, birnetthread.c: provide chain4init and
	unchain variants for recursive mutexes and conditions. this required
	reordering of the BirnetRecMutex fields. provide static declaration
	macros for recursive mutexes and conditions in C.

	* birnetsignalslot.hh: hook trampolines into the destruction phase
	of a Deletable, if the instance of a method trampoline is a Deletable.
	as a side effect of this, slot-= only works for Deletable instance
	methods, *before* the instance is deleted.

	* birnetsignal.hh: provide VoidSlot and BoolSlot for convenience.

	* birnetutilsxx.hh, birnetutilsxx.cc: implemented class
	Deletable::DestructionHook which allowes hooking up (thread safe) of
	callbacks into the destruction phase of a Deletable.

	* tests/signal.cc: added tests for signal connections on temporary
	objects that trigger Deletable destruction hooks.
